# Luna-Tensorflow

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  prepareDocsJSON.py
API/: .gitignore  Main.luna  README.md
API/Tensorflow/: .gitignore  classification.tf  state.tf  tensors.tf
API/Tensorflow/.luna-package/: Tensorflow.lunaproject
API/Tensorflow/native_libs/src/: CMakeLists.txt  main.cpp
API/Tensorflow/native_libs/src/c_wrappers/: attributes.cpp  attributes.h  common.h  gradient_wrapper.cpp  gradient_wrapper.h  helpers.cpp  helpers.h  memory.cpp  memory.h  operations.cpp  operations.h  pngtensors.cpp  pngtensors.h  tensors.cpp  tensors.h
API/Tensorflow/native_libs/src/gradient/: Gradient.h
API/Tensorflow/native_libs/src/graph/: GraphSession.cpp  GraphSession.h
API/Tensorflow/native_libs/src/helpers/: LifeTimeManager.h  error.cpp  error.h  logging.h  salter.cpp  salter.h  utils.cpp  utils.h
API/Tensorflow/native_libs/src/ops/: Attr.cpp  Attr.h  BinaryOperation.h  Binder.h  Const.h  Gradient.cpp  Gradient.h  Node.h  Operation.cpp  Operation.h  Output.cpp  Output.h  Partial.cpp  Partial.h  Placeholder.cpp  Placeholder.h  UnaryOperation.cpp  UnaryOperation.h
API/Tensorflow/native_libs/src/png/: error.hpp  io_base.hpp  png.hpp  types.hpp
API/Tensorflow/native_libs/src/state/: Assign.cpp  Assign.h  Sequence.cpp  Sequence.h  State.cpp  State.h  Variable.cpp  Variable.h
API/Tensorflow/native_libs/src/tensor/: Tensor.cpp  Tensor.h  TypeLabel.h
API/Tensorflow/op_generator/: TODO  generator.py
API/Tensorflow/src/: FixTypes.luna  GeneratedOps.luna  Gradient.luna  Graph.luna  Lift.luna  Main.luna  Main2.luna  Main3.luna  Model.luna  Operations.luna  Padding.luna  Patches.luna  Tensor.luna  Test.luna  TestVisual.luna  Types.luna  Variables.luna
API/Tensorflow/src/CFunctions/: Model.luna
API/Tensorflow/src/CWrappers/: Graph.luna  Helpers.luna  Operations.luna  State.luna  Tensor.luna  Variables.luna
API/Tensorflow/src/Examples/: Classification.luna  Convolutional.luna  Highlevel.luna  LowlevelNet.luna
API/Tensorflow/src/Layers/: Activation.luna  BaseLayer.luna  Conv.luna  Conv1d.luna  Conv2d.luna  Dense.luna  Dropout.luna  Input.luna  Layers.luna  LayersHelper.luna  Merge.luna  Reshape.luna
API/Tensorflow/src/Losses/: Crossentropy.luna  MSE.luna  MeanError.luna
API/Tensorflow/visualizers/: README.md  visualization-common.css  visualization-common.js  visualization-config-helper.js
API/local_libs/Tensorflow/: native_libs
API/native_libs/src/: CMakeLists.txt  LifeTimeManager.h  LifeTimeManger.cpp  Tensor.cpp  Tensor.h  TypeLabel.h  main.cpp  utils.cpp  utils.h
API/src/: Main.luna
FfiExample/: .gitignore  Main.luna  README.md
FfiExample/.luna-package/: FfiTest.lunaproject  config.yaml
FfiExample/native_libs/src/: CMakeLists.txt
FfiExample/src/: Main.luna
Tutorial/: .gitignore  README.html  README.md  get_data.sh  mnist_to_png.py  requirements.txt
Tutorial/.luna-package/: Tutorial.lunaproject  config.yaml
Tutorial/local_libs/: Tensorflow
Tutorial/src/: Main.luna
cpp_helpers/: Tensor.h  TypeLabel.h
cpp_regression/: CMakeLists.txt
cpp_regression/cpp_helpers/: Tensor.cpp  Tensor.h
cpp_regression/src/: Attr.cpp  Graph.h  TFException.cpp  TFException.h  main.cpp
scripts/: .before_windows.sh.swp  .deploy_windows.sh.swp  Main.hs  before_linux.sh  before_osx.sh  before_windows.sh  deploy_linux.sh  deploy_osx.sh  deploy_windows.sh
src/: Attr.h  Graph.cpp  Graph.h  Tensor2d.cpp  Tensor2d.h  example_main.cc  main.cpp
src/tf/: tensor.cc  tensor.h  version.cc  version.h
(+44 files in other folders)
